some minor fixes with some gaps

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,11 @@ body{
     min-height:100vh;
     max-height:1080px;
     display:grid;
-    border:1px solid gray;
+    /* border:1px solid gray; */
     grid-template-rows: 100%;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 75%;
     grid-template-areas:"leftContainer rightContainer";
+    grid-gap:2.5%;
 }
 .leftSection{
     grid-area:leftContainer;
@@ -28,7 +29,6 @@ body{
     grid-template-rows: minmax(200px,40%) minmax(200px,30%) 30%;
     padding:10px 40px;
     border-right:1px solid gray;
-    margin-right:50px;
     width:100%;
 }
 .rightSection{
@@ -67,10 +67,11 @@ body{
     justify-content: space-between;
     padding:10px 0;
 }
-.leftSection-down-search{
+.formContainer{
     padding-bottom:10px;
     border-bottom: 1px solid #c0c0c0;
 }
+
 .leftSection-down-search input{
     border:none;
     background-color: transparent;
@@ -85,6 +86,7 @@ body{
     justify-content: space-between;
     align-items: center;
     height:30px;
+    width: 100%;
 }
 .leftSection-down-newsletter a{
     text-decoration: none;
@@ -233,6 +235,9 @@ body{
 }
 
 @media screen and (max-width:1440px){
+    .leftSection{
+        padding:10px 20px;
+    }
     .bottomRight-buttons button{
         width:120px;
         height: 30px;
@@ -240,6 +245,12 @@ body{
     }
 }
 @media screen and (max-width:1024px){
+    .gridContainer{
+        grid-gap:1%;
+    }
+    .leftSection{
+        padding:10px;
+    }
     .bottomContainer{
         padding:20px 20px 0;
     }
@@ -277,14 +288,13 @@ body{
 @media screen and (max-width:768px){
     .gridContainer{
         max-width:767px;
+        grid-gap:0px;
+        grid-template-columns: 30% 70%;
     }
     .leftSection{
         padding:5px 20px;
-        margin-right:10px;
     } 
-    .downSpacing{ 
-         width:100%;
-     }
+    
      /* Bottom Right Container */
      .rightSection .bottomRight{
         grid-template-rows: 50% repeat(2,20%) 10%;
